refactor(test): use useModulePath=false in Surefire configuration for simplicity