@@ -65,13 +65,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>
-                        @{argLine}
-                        --add-opens org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED
-                        --add-opens org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED
-                        --add-reads io.github.sekelenao.flinkboot.test=ALL-UNNAMED
-                        --add-reads io.github.sekelenao.flinkboot.core=ALL-UNNAMED
-                    </argLine>
+                    <useModulePath>false</useModulePath>
                 </configuration>
             </plugin>
         </plugins>
